# Effortless

./: .backlog_ids.json  .gitignore  LICENSE  README.md  setup.ps1  setup.sh
cadrage/: 0-MVP.md  1-Fonctionnel-global.md  2-Technique-global.md  3-Backlog.md  4-Evolutions.md  5-Questions.md  6-Suivi-stats.md  9-Guide-Obsidian.md
cadrage/001-Epic-Projet/: 0-Epic.md  1-Stories.md
cadrage/002-Epic-Tracker/: 0-Epic.md  1-Stories.md  2-BQO.md
src/mcp-server/: README.md  pyproject.toml
src/mcp-server/effortless_mcp/: __init__.py  server.py
src/mcp-server/effortless_mcp/models/: config.py  decision.py  epic.py  question.py  state.py  story.py  task.py
src/mcp-server/effortless_mcp/ports/: __init__.py  integration.py  sync_journal.py  tracker.py
src/mcp-server/effortless_mcp/ports/adapters/: __init__.py  jira.py  jira_client.py
src/mcp-server/effortless_mcp/services/: backlog.py  bqo.py  cadrage_frontmatter.py  deploy.py  drift.py  epic_cadrage.py  evolutions.py  init_modes.py  markdown.py  migration_planner.py  nomenclature.py  repo_analyzer.py  scaffold_state.py  scaffolder.py  secondbrain.py  session_loop.py  state_migrator.py  sync.py  validation.py
src/mcp-server/effortless_mcp/templates/: __init__.py  jira_project_scaffold.json
src/mcp-server/effortless_mcp/templates/cadrage_vault/: 6-Suivi-stats.md  6-Suivi.base
src/mcp-server/effortless_mcp/templates/cadrage_vault/.obsidian/: community-plugins.json  graph.json
src/mcp-server/effortless_mcp/templates/cadrage_vault/.obsidian/plugins/colored-tags/: data.json
src/mcp-server/tests/: test_services.py
(+138 files in other folders)
