[project]
name = "effortless-mcp"
version = "0.1.0"
description = "Agnostic project management framework MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13",
    "pydantic>=2.9",
    "pyyaml>=6.0",
]

[project.scripts]
effortless-mcp = "effortless_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["effortless_mcp"]

